--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="site-wrapper">
+    <!-- Портретный режим -->
+    <div class="portrait-mode">
         <header class="header">
             <div class="logo">
                 <img src="logo/Likbez.png" alt="Логотип" />
@@ -30,21 +31,50 @@
                 <img src="svg/Contact Us.svg" alt="Contact Us" class="landing-block">
             </main>
         </div>
-        <div class="rotate-screen-button">
-            <button id="rotateScreenBtn">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M10 9V5L3 12L10 19V14.9C15 14.9 18.5 16.5 21 20C20 15 17 10 10 9Z" fill="white"/>
-                </svg>
-            </button>
+    </div>
+
+    <!-- Ландшафтный режим -->
+    <div class="landscape-mode">
+        <div class="landscape-content">
+            <header class="header">
+                <div class="logo">
+                    <img src="logo/Likbez.png" alt="Логотип" />
+                </div>
+            </header>
+            <div class="container">
+                <img src="svg/Changer.svg" alt="changer" style="width: 100%; height: auto;">
+                <main class="main-content">
+                    <img src="svg/Science_Map.svg" alt="Science Map" class="landing-block">
+                    <img src="svg/Chronological_Discoveries.svg" alt="Chronological Discoveries" class="landing-block">
+                    <img src="svg/Frame 1116606602.svg" alt="Frame 1116606602" class="landing-block">
+                    <img src="svg/Unusual_Abstractions.svg" alt="Unusual Abstractions" class="landing-block">
+                    <img src="svg/Learning_Tool.svg" alt="Learning Tool" class="landing-block">
+                    <img src="svg/Infographic_Nodes.svg" alt="Infographic Nodes" class="landing-block">
+                    <img src="svg/Frame 1116606609.svg" alt="Frame 1116606609" class="landing-block">
+                    <img src="svg/Profiles.svg" alt="Profiles" class="landing-block">
+                    <img src="svg/COOP.svg" alt="COOP" class="landing-block">
+                    <img src="svg/Ideas_Incubator.svg" alt="Ideas Incubator" class="landing-block">
+                    <img src="svg/Example_Dispute_Node.svg" alt="Example: Dispute Node" class="landing-block">
+                    <img src="svg/Contact Us.svg" alt="Contact Us" class="landing-block">
+                </main>
+            </div>
         </div>
     </div>
+
+    <div class="rotate-screen-button">
+        <button id="rotateScreenBtn">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M10 9V5L3 12L10 19V14.9C15 14.9 18.5 16.5 21 20C20 15 17 10 10 9Z" fill="white"/>
+            </svg>
+        </button>
+    </div>
+
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const blocks = document.querySelectorAll('.landing-block');
             const rotateButton = document.querySelector('.rotate-screen-button');
-            const siteWrapper = document.querySelector('.site-wrapper');
             const rotateBtn = document.getElementById('rotateScreenBtn');
-            let isRotated = false;
+            let isLandscape = false;
 
             // Проверка на мобильное устройство
             function isMobileDevice() {
@@ -52,35 +82,45 @@
                        (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent));
             }
 
-            // Показываем/скрываем кнопку в зависимости от устройства
-            function updateRotateButton() {
+            // Показываем/скрываем кнопку и ландшафтный режим в зависимости от устройства
+            function updateMobileFeatures() {
                 if (isMobileDevice()) {
                     rotateButton.style.display = 'block';
+                    document.querySelector('.landscape-mode').style.display = 'none';
                 } else {
                     rotateButton.style.display = 'none';
+                    document.querySelector('.landscape-mode').style.display = 'none';
+                    document.body.classList.remove('landscape');
+                    isLandscape = false;
                 }
             }
 
-            // Функция поворота контента
-            function rotateContent() {
-                if (!isRotated) {
-                    siteWrapper.classList.add('rotated');
-                    document.body.style.overflow = 'hidden';
+            // Функция переключения режима
+            function toggleOrientation() {
+                if (!isMobileDevice()) return; // Запрещаем переключение на десктопе
+                
+                if (!isLandscape) {
+                    document.body.classList.add('landscape');
                     rotateBtn.classList.add('rotated');
+                    document.querySelector('.portrait-mode').style.display = 'none';
+                    document.querySelector('.landscape-mode').style.display = 'block';
+                    // Прокручиваем в начало при переключении
+                    document.querySelector('.landscape-content').scrollTop = 0;
                 } else {
-                    siteWrapper.classList.remove('rotated');
-                    document.body.style.overflow = '';
+                    document.body.classList.remove('landscape');
                     rotateBtn.classList.remove('rotated');
+                    document.querySelector('.portrait-mode').style.display = 'block';
+                    document.querySelector('.landscape-mode').style.display = 'none';
                 }
-                isRotated = !isRotated;
+                isLandscape = !isLandscape;
             }
 
             // Назначаем обработчик на кнопку
-            rotateBtn.addEventListener('click', rotateContent);
+            rotateBtn.addEventListener('click', toggleOrientation);
 
             // Проверяем при загрузке и при изменении размера окна
-            updateRotateButton();
-            window.addEventListener('resize', updateRotateButton);
+            updateMobileFeatures();
+            window.addEventListener('resize', updateMobileFeatures);
 
             const observer = new IntersectionObserver((entries) => {
                 entries.forEach(entry => {
