--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Likbez</title>
+    <title>Лендинг</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -64,7 +64,9 @@
     <div class="rotate-screen-button">
         <button id="rotateScreenBtn">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M10 9V5L3 12L10 19V14.9C15 14.9 18.5 16.5 21 20C20 15 17 10 10 9Z" fill="white"/>
+                <path d="M12 4L12 20M12 4L8 8M12 4L16 8" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M12 20L8 16M12 20L16 16" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M4 12H20" stroke="white" stroke-width="2" stroke-linecap="round"/>
             </svg>
         </button>
     </div>
