--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
         <div class="container">
             <img src="svg/Changer.svg" alt="changer" style="width: 100%; height: auto;">
             <main class="main-content">
-                <img src="svg/Science_Map.svg" alt="Science Map" class="landing-block">
-                <img src="svg/Chronological_Discoveries.svg" alt="Chronological Discoveries" class="landing-block">
-                <img src="svg/Frame 1116606602.svg" alt="Frame 1116606602" class="landing-block">
-                <img src="svg/Unusual_Abstractions.svg" alt="Unusual Abstractions" class="landing-block">
-                <img src="svg/Learning_Tool.svg" alt="Learning Tool" class="landing-block">
-                <img src="svg/Infographic_Nodes.svg" alt="Infographic Nodes" class="landing-block">
-                <img src="svg/Frame 1116606609.svg" alt="Frame 1116606609" class="landing-block">
-                <img src="svg/Profiles.svg" alt="Profiles" class="landing-block">
-                <img src="svg/COOP.svg" alt="COOP" class="landing-block">
-                <img src="svg/Ideas_Incubator.svg" alt="Ideas Incubator" class="landing-block">
-                <img src="svg/Example_Dispute_Node.svg" alt="Example: Dispute Node" class="landing-block">
-                <img src="svg/Contact Us.svg" alt="Contact Us" class="landing-block">
+                <img src="svg/Science_Map.svg" alt="Science Map" class="landscape-block">
+                <img src="svg/Chronological_Discoveries.svg" alt="Chronological Discoveries" class="landscape-block">
+                <img src="svg/Frame 1116606602.svg" alt="Frame 1116606602" class="landscape-block">
+                <img src="svg/Unusual_Abstractions.svg" alt="Unusual Abstractions" class="landscape-block">
+                <img src="svg/Learning_Tool.svg" alt="Learning Tool" class="landscape-block">
+                <img src="svg/Infographic_Nodes.svg" alt="Infographic Nodes" class="landscape-block">
+                <img src="svg/Frame 1116606609.svg" alt="Frame 1116606609" class="landscape-block">
+                <img src="svg/Profiles.svg" alt="Profiles" class="landscape-block">
+                <img src="svg/COOP.svg" alt="COOP" class="landscape-block">
+                <img src="svg/Ideas_Incubator.svg" alt="Ideas Incubator" class="landscape-block">
+                <img src="svg/Example_Dispute_Node.svg" alt="Example: Dispute Node" class="landscape-block">
+                <img src="svg/Contact Us.svg" alt="Contact Us" class="landscape-block">
             </main>
         </div>
     </div>
@@ -44,18 +44,18 @@
             <div class="container">
                 <img src="svg/Changer.svg" alt="changer" style="width: 100%; height: auto;">
                 <main class="main-content">
-                    <img src="svg/Science_Map.svg" alt="Science Map" class="landing-block">
-                    <img src="svg/Chronological_Discoveries.svg" alt="Chronological Discoveries" class="landing-block">
-                    <img src="svg/Frame 1116606602.svg" alt="Frame 1116606602" class="landing-block">
-                    <img src="svg/Unusual_Abstractions.svg" alt="Unusual Abstractions" class="landing-block">
-                    <img src="svg/Learning_Tool.svg" alt="Learning Tool" class="landing-block">
-                    <img src="svg/Infographic_Nodes.svg" alt="Infographic Nodes" class="landing-block">
-                    <img src="svg/Frame 1116606609.svg" alt="Frame 1116606609" class="landing-block">
-                    <img src="svg/Profiles.svg" alt="Profiles" class="landing-block">
-                    <img src="svg/COOP.svg" alt="COOP" class="landing-block">
-                    <img src="svg/Ideas_Incubator.svg" alt="Ideas Incubator" class="landing-block">
-                    <img src="svg/Example_Dispute_Node.svg" alt="Example: Dispute Node" class="landing-block">
-                    <img src="svg/Contact Us.svg" alt="Contact Us" class="landing-block">
+                    <img src="svg/Science_Map.svg" alt="Science Map" class="landscape-block">
+                    <img src="svg/Chronological_Discoveries.svg" alt="Chronological Discoveries" class="landscape-block">
+                    <img src="svg/Frame 1116606602.svg" alt="Frame 1116606602" class="landscape-block">
+                    <img src="svg/Unusual_Abstractions.svg" alt="Unusual Abstractions" class="landscape-block">
+                    <img src="svg/Learning_Tool.svg" alt="Learning Tool" class="landscape-block">
+                    <img src="svg/Infographic_Nodes.svg" alt="Infographic Nodes" class="landscape-block">
+                    <img src="svg/Frame 1116606609.svg" alt="Frame 1116606609" class="landscape-block">
+                    <img src="svg/Profiles.svg" alt="Profiles" class="landscape-block">
+                    <img src="svg/COOP.svg" alt="COOP" class="landscape-block">
+                    <img src="svg/Ideas_Incubator.svg" alt="Ideas Incubator" class="landscape-block">
+                    <img src="svg/Example_Dispute_Node.svg" alt="Example: Dispute Node" class="landscape-block">
+                    <img src="svg/Contact Us.svg" alt="Contact Us" class="landscape-block">
                 </main>
             </div>
         </div>
@@ -75,7 +75,7 @@
         document.addEventListener('DOMContentLoaded', function() {
             const rotateButton = document.querySelector('.rotate-screen-button');
             const rotateBtn = document.getElementById('rotateScreenBtn');
-            const blocks = document.querySelectorAll('.landing-block');
+            const blocks = document.querySelectorAll('.landscape-block');
             let isLandscape = false;
 
             // Улучшенная проверка на мобильное устройство
@@ -106,13 +106,16 @@
                 
                 const portraitMode = document.querySelector('.portrait-mode');
                 const landscapeMode = document.querySelector('.landscape-mode');
+                const landscapeContent = landscapeMode.querySelector('.landscape-content');
                 
                 if (!isLandscape) {
                     document.body.classList.add('landscape');
                     rotateBtn.classList.add('rotated');
                     portraitMode.style.display = 'none';
                     landscapeMode.style.display = 'block';
-                    landscapeMode.querySelector('.landscape-content').scrollTop = 0;
+                    if (landscapeContent) {
+                        landscapeContent.scrollTop = 0;
+                    }
                 } else {
                     document.body.classList.remove('landscape');
                     rotateBtn.classList.remove('rotated');
@@ -133,7 +136,8 @@
                         }
                     });
                 }, {
-                    threshold: 0.1
+                    threshold: 0.1,
+                    rootMargin: '50px'
                 });
 
                 blocks.forEach(block => {
